# Cpp-High-Precision-Computing-Class

./: .gitignore  CMakeLists.txt  README.md
includes/: BigInt.hpp
src/: main  main.cpp
tools/: algorithm.cpp  compare.cpp  initialize.cpp  iostream.cpp
